fix: tag de imagens

--- a/docs/Base/1.2.ProcessosMetodologiasAbordagens.md
+++ b/docs/Base/1.2.ProcessosMetodologiasAbordagens.md
@@ -86,17 +86,17 @@ Figura 1 - Elementos da Modelagem BPMN
         <td rowspan="3">Objetos de Fluxo</td>
         <td>Eventos</td>
         <td>Gatilho que inicia, modifica ou conclui um processo com vários tipos de eventos, representados por círculos contendo símbolos específicos, classificados como "lançadores" ou "captadores" conforme sua função.</td>
-        <td><img src='../assets/eventos.png'></td>
+        <td><img src='assets/eventos.png'></td>
     </tr>
     <tr>
         <td>Atividades</td>
         <td>Uma ação ou tarefa específica executada e visualizada como um retângulo com cantos arredondados. Essa representação pode ser enriquecida com detalhes adicionais, como subprocessos, iterações, compensações e execuções simultâneas.</td>
-        <td><img src='../assets/atividades.png'></td>
+        <td><img src='assets/atividades.png'></td>
     </tr>
     <tr>
         <td>Pontos de Decisão</td>
         <td>Ponto de decisão que pode ajustar o caminho com base em condições ou eventos. São representados como losangos. Eles podem ser exclusivos ou inclusivos, paralelos, complexos ou baseados em dados ou eventos.</td>
-        <td><img src='../assets/ponto_decisao.png'></td>
+        <td><img src='assets/ponto_decisao.png'></td>
     </tr>
     <!-- Segunda linha -->
     <tr>
@@ -104,24 +104,24 @@ Figura 1 - Elementos da Modelagem BPMN
         <td>Fluxo de Sequência</td>
         <td>
 Mostra a ordem das atividades a serem realizadas. É representado como uma linha reta com uma seta. Pode indicar um fluxo condicional ou um fluxo padrão.</td>
-        <td><img src='../assets/fluxo_sequencia.png'></td>
+        <td><img src='assets/fluxo_sequencia.png'></td>
     </tr>
     <tr>
         <td>Fluxo de Mensagem</td>
         <td>Mostra a comunicação que atravessa "pools" ou fronteiras organizacionais, como departamentos, evitando conexões entre eventos ou atividades internas ao "pool". É indicado por uma linha tracejada com um círculo no início e uma seta no final.</td>
-        <td><img src='../assets/fluxo_mensagem.png'></td>
+        <td><img src='assets/fluxo_mensagem.png'></td>
     </tr>
     <tr>
         <td>Associação</td>
         <td>Indicado por uma linha tracejada, conecta um artefato ou texto a um evento, atividade ou gateway específico.</td>
-        <td><img src='../assets/associacao.png'></td>
+        <td><img src='assets/associacao.png'></td>
     </tr>
     <!-- Terceira linha -->
     <tr>
         <td rowspan="1">Swimlanes(Raias)</td>
         <td>pool ou Lane</td>
         <td>Uma "pool" representa os participantes principais de um processo. Essas "pools" podem ser de diferentes empresas ou departamentos, mas ainda estão relacionadas ao processo. Dentro de cada "pool," as "swimlanes" indicam as atividades e o fluxo específico para um papel ou participante, definindo claramente quem é responsável por quais partes do processo.</td>
-        <td><img src='../assets/piscina.png'></td>
+        <td><img src='assets/piscina.png'></td>
     </tr>
     <!-- Quarta linha -->
     <tr>
@@ -129,7 +129,7 @@ Mostra a ordem das atividades a serem realizadas. É representado como uma linha
         <td>Dado, grupo e anotação</td>
         <td>
 Os artefatos são elementos adicionados a um diagrama para enriquecê-lo com informações. Um "objeto de dados" identifica dados essenciais, um "grupo" organiza atividades logicamente sem impactar o fluxo, e uma "anotação" oferece esclarecimentos adicionais em seções do diagrama. Esses elementos contribuem para a compreensão e completude do diagrama.</td>
-        <td><img src='../assets/artefatos.png'></td>
+        <td><img src='assets/artefatos.png'></td>
     </tr>
 </table>
 
@@ -143,7 +143,7 @@ A figura 2 ilustra as escolhas metodológicas do projeto e como funciona o fluxo
 <center>
 Figura 2 - Diagrama BPMN de Escolhas Metodológicas
 
-<img src="../assets/metodologias-bpmn.png" alt="BPMN Metodologias" width="3000"/> </br>
+<img src="assets/metodologias-bpmn.png" alt="BPMN Metodologias" width="3000"/> </br>
 
 <font>Fonte: [Douglas Alves](https://github.com/dougAlvs) e [Sidney Fernando](https://github.com/nando3d3), 2023.</font>
 </center>
@@ -155,7 +155,7 @@ Já a figura 3 evidencia as etapas da design sprint e a relação entre os artef
 <center>
 Figura 3 - Diagrama BPMN da Design Sprint
 
-<img src="../assets/design-sprint-bpmn.png" alt="BPMN Design Sprint" height="1000"/></br>
+<img src="assets/design-sprint-bpmn.png" alt="BPMN Design Sprint" height="1000"/></br>
 
 
 <font>Fonte: [Douglas Alves](https://github.com/dougAlvs) e [Sidney Fernando](https://github.com/nando3d3), 2023</font>
