--- a/docs/Base/1.3.ParticipacoesBase.md
+++ b/docs/Base/1.3.ParticipacoesBase.md
@@ -11,7 +11,7 @@ Esse documento apresenta as auto-avaliações que cada integrante do grupo fez a
 | Nome do Membro                                      | Contribuição                                                                                                                                                                                                                                    | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) |
 | --------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------ |
 | [Laura Pinos](https://github.com/laurapinos)        | [5W2H](Base/5W2H.md)                                                                                                                                                                                                                           | Boa                                                                            |
-| [Hellen Fernanda](https://github.com/Hellen159)     | [5W2H](Base/5W2H.md) <br> [Rich Picture](Base/RichPicture.md)                                                                                                              |                                                                                |
+| [Hellen Fernanda](https://github.com/Hellen159)     | [5W2H](Base/5W2H.md) <br> [Rich Picture](Base/RichPicture.md)                                                                                                              |                                                               Excelente                  |
 | [Débora Caires](https://github.com/deboracaires)    | [5W2H](Base/5W2H.md) <br> [Protótipos](Base/Prototipos.md)                                                                                                                                                                       | Excelente                                                                      |
 | [Arthur de Melo](https://github.com/arthurmlv)      | [Diagrama Causa-Efeito](Base/causa-efeito.md) <br> [Léxicos](Base/lexicos.md) <br> [Teste de Usabilidade](Base/validacao-prototipo.md)                 |     Excelente                                                                           |
 | [Douglas Alves](https://github.com/dougAlvs)        | [Diagrama Causa-Efeito](Base/causa-efeito.md) <br> [Design Sprint](Base/1.1.AbordagemNaoEspecifica.md)      |      Excelente                                                                          |
