--- a/docs/Modelagem/2.2.ParticipacoesModelagem.md
+++ b/docs/Modelagem/2.2.ParticipacoesModelagem.md
@@ -1,17 +1,233 @@
 # 2.2. Participações - Modelagem
 
-Breve relato sobre as participações/contribuições de cada membro à entrega. 
+## Introdução
 
-Notação UML – Diagrama Estático
-|Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) |
-| -- | -- | -- |
-| Fulano  |  1. Colaborações no Diagrama de Classe, especificando as Classes CLASSE_X e CLASSE_Y. 2. Participação no Brainstorming para elaboração do Diagrama de Classes. | Boa |
+Esse documento apresenta as participações de cada integrante do grupo na elaboração dos artefatos da etapa de modelagem.
 
-TODOS DEVEM PARTICIPAR, MOSTRANDO SEUS PONTOS DE VISTA E COMO COLABORARAM NESSA ETAPA DA ENTREGA.
+## Metodologia
 
-Notação UML – Diagrama Dinâmico
-|Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) |
-| -- | -- | -- |
-| Fulano  |  1. Colaborações no Diagrama de Estados, especificando as trocas entre os Estados ESTADO_X e ESTADO_Y. 2. Leitura dos materiais bibliográficos FONTE_X, FONTE_Y e FONTE_Z, além de explanações aos colegas da equipe sobre o conhecimento adquirido. | Boa |
+Antes de se iniciar a construção dos artefatos para a entrega foi elaborado um cronograma para melhor organizar o grupo. Após isso, na reunião de planning, foi feita a separação das tarefas para cada integrante, além da criação das respectivas issues no github e preenchimento do cronograma. A tabela 1 apresenta o cronograma planejado da entrega.
 
-TODOS DEVEM PARTICIPAR, MOSTRANDO SEUS PONTOS DE VISTA E COMO COLABORARAM NESSA ETAPA DA ENTREGA.
+<center>
+<font size="3"><p style="text-align: center"><b>Tabela 1</b> - Cronograma Planejado Entrega 2</p></font>
+
+<iframe style="height: 545px; width: 1030px;" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRw2u-lLpth997XS3LDg9u4PyLIFELeHZtu6ayavYH8aDXA1Cx2zRxGyiu0i9kSTBHJhobp4PK0Ppxq/pubhtml?gid=0&amp;single=true&amp;widget=false&amp;headers=false&amp;chrome=false"></iframe>
+
+<font size="3"><p style="text-align: center">Fonte: [Douglas Alves](https://github.com/dougAlvs) e [Geovanna Maciel](https://github.com/manuziny), 2023</p></font>
+</center>
+
+Para a avaliação da participação individual, foi elaborado um [formulário]() em que cada pessoa alocada para um determinado artefato avaliaria sua participação nele, além da participação dos demais colegas. A avaliação foi feita em uma escala de 0 a 4, com o 0 representando uma participação nula e 4 uma participação excelente. Dito isso, a média dessas avaliações será disponibilizada aqui, assim como um breve texto em que cada integrante descreve suas contribuições para a entrega.
+
+
+## Participações
+
+A tabela 2 sintetiza cada integrante do grupo e sua participação nos respectivos artefatos em que foi alocado.
+
+<center>
+<font size="3"><p style="text-align: center"><b>Tabela 2</b> - Participações Entrega Modelagem</p></font>
+<table style="width: 1200px table-layout: fixed">
+<colgroup>
+<col style="width: 446px">
+<col style="width: 445px">
+<col style="width: 401px">
+<col style="width: 293px">
+</colgroup>
+<thead>
+  <tr>
+    <th>Nome do Membro</th>
+    <th>Contribuição</th>
+    <th>Auto-avaliação (Excelente/Boa/Regular/Ruim/Nula)</th>
+    <th>Média Avaliação em Pares (Excelente/Boa/Regular/Ruim/Nula)</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td rowspan="3"> <a href="https://github.com/arthurmlv">Arthur de Melo</a></td>
+    <td><a href="#/Modelagem/">Diagrama de Comunicação</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td> <a href="#/Modelagem/">Diagrama de Atividades</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td> <a href="#/Modelagem/">Diagrama de Pacotes</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td rowspan="2"> <a href="https://github.com/deboracaires">Débora Caires</a></td>
+    <td><a href="#/Modelagem/">Diagrama de Comunicação</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td><a href="#/Modelagem/">Diagrama de Componentes</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td rowspan="4"> <a href="https://github.com/dougAlvs">Douglas Alves</a></td>
+    <td><a href="#/Modelagem/2.2.ParticipacoesModelagem">Participação - Modelagem</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td><a href="#/Modelagem/">Diagrama de Sequência</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td><a href="#/Modelagem/">Diagrama de Componentes</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td><a href="#/Modelagem/">Diagrama de Pacotes</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td rowspan="3"> <a href="https://github.com/manuziny">Geovanna Maciel</a></td>
+    <td><a href="#/Modelagem/">Diagrama de Comunicação</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td><a href="#/Modelagem/">Diagrama de Atividades</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td><a href="#/Modelagem/">Diagrama de Pacotes</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td rowspan="2"> <a href="https://github.com/Hellen159">Hellen Fernanda</a></td>
+    <td><a href="#/Modelagem/">Diagrama de Sequência</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td><a href="#/Modelagem/">Diagrama de Classes</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td rowspan="3"> <a href="https://github.com/laurapinos">Laura Pinos</a></td>
+    <td><a href="#/Modelagem/">Diagrama de Sequência</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td><a href="#/Modelagem/">Diagrama de Componentes</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td><a href="#/Modelagem/">Diagrama de Classes</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td rowspan="3"> <a href="https://github.com/macieljuniormax">Maciel Junior</a></td>
+    <td><a href="#/Modelagem/">Diagrama de Atividades</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td><a href="#/Modelagem/">Diagrama de Componentes</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td><a href="#/Modelagem/">Diagrama de Classes</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td rowspan="2"> <a href="https://github.com/mathonaut">Matheus Henrique</a></td>
+    <td><a href="#/Modelagem/">Diagrama de Sequência</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td><a href="#/Modelagem/">Diagrama de Pacotes</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td rowspan="4"><a href="https://github.com/nando3d3">Sidney Fernando</a></td>
+    <td><a href="#/Modelagem/2.2.ParticipacoesModelagem">Participação - Modelagem</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td><a href="#/Modelagem/">Diagrama de Comunicação</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td><a href="#/Modelagem/">Diagrama de Atividades</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td><a href="#/Modelagem/">Diagrama de Classes</a></td>
+    <td></td>
+    <td></td>
+  </tr>
+</tbody>
+</table>
+
+<font size="3"><p style="text-align: center">Fonte: [Douglas Alves](https://github.com/dougAlvs), 2023</p></font>
+
+</center>
+
+### Relato Individual de Participação
+
+Este tópico tem como objetivo trazer a visão individual de cada participante do grupo acerca de suas contribuições para a entrega.
+
+#### <a href="https://github.com/arthurmlv">Arthur de Melo</a>
+
+#### <a href="https://github.com/deboracaires">Débora Caires</a>
+ 
+#### <a href="https://github.com/dougAlvs">Douglas Alves</a>
+
+ 
+#### <a href="https://github.com/manuziny">Geovanna Maciel</a>
+
+ 
+#### <a href="https://github.com/Hellen159">Hellen Fernanda</a>
+ 
+#### <a href="https://github.com/laurapinos">Laura Pinos</a>
+ 
+#### <a href="https://github.com/macieljuniormax">Maciel Junior</a>
+ 
+#### <a href="https://github.com/mathonaut">Matheus Henrique</a>
+ 
+#### <a href="https://github.com/nando3d3">Sidney Fernando</a>
+ 
+
+## Quadro de commits
+
+As figuras abaixo mostram os commits dos participantes do grupo na segunda entrega.
+
+<font size="3"><p style="text-align: center"><b>Figura 1</b> - Quadro de commits 1</p></font>
+<!-- <img src="assets/../assets/" alt="Gráfico de Commits 1" width="1000"/></br> -->
+<font size="3"><p style="text-align: center">Fonte: [Douglas Alves](https://github.com/dougAlvs), 2023</p></font>
+
+<br>
+
+<font size="3"><p style="text-align: center"><b>Figura 2</b> - Quadro de commits 2</p></font>
+<!-- <img src="assets/../assets/" alt="Grafico de Commits 2" width="1000"/></br> -->
+<font size="3"><p style="text-align: center">Fonte: [Douglas Alves](https://github.com/dougAlvs), 2023</p></font>
+
+## Histórico de Versões
+
+| Versão | Data       | Descrição                   | Autor(es)                                        | Revisor(es)                                  |
+| ------ | ---------- | --------------------------- | ------------------------------------------------ | -------------------------------------------- |
+| `1.0`  | 08/10/2023 | Criação da página           | [Douglas Alves](https://github.com/dougalvs)  | [Sidney Fernando](https://github.com/nando3d3) |
