docs: avalicao Sidney

--- a/docs/Modelagem/2.2.ParticipacoesModelagem.md
+++ b/docs/Modelagem/2.2.ParticipacoesModelagem.md
@@ -162,22 +162,22 @@ A tabela 2 sintetiza cada integrante do grupo e sua participação nos respectiv
   <tr>
     <td rowspan="4"><a href="https://github.com/nando3d3">Sidney Fernando</a></td>
     <td><a href="#/Modelagem/2.2.ParticipacoesModelagem">Participação - Modelagem</a></td>
-    <td></td>
+    <td>Excelente</td> 
     <td></td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Comunicação</a></td>
-    <td></td>
+    <td>Excelente</td>
     <td></td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Atividades</a></td>
-    <td></td>
+    <td>Excelente</td>
     <td></td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Classes</a></td>
-    <td></td>
+    <td>Excelente</td>
     <td></td>
   </tr>
 </tbody>
