Add [Participacao - modelagem] - Auto-avaliacao e relato individual Debora

--- a/docs/Modelagem/2.2.ParticipacoesModelagem.md
+++ b/docs/Modelagem/2.2.ParticipacoesModelagem.md
@@ -60,8 +60,8 @@ A tabela 2 sintetiza cada integrante do grupo e sua participação nos respectiv
   <tr>
     <td rowspan="2"> <a href="https://github.com/deboracaires">Débora Caires</a></td>
     <td><a href="#/Modelagem/">Diagrama de Comunicação</a></td>
-    <td></td>
-    <td></td>
+    <td>Excelente</td>
+    <td>Excelente</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Componentes</a></td>
@@ -194,7 +194,8 @@ Este tópico tem como objetivo trazer a visão individual de cada participante d
 #### <a href="https://github.com/arthurmlv">Arthur de Melo</a>
 
 #### <a href="https://github.com/deboracaires">Débora Caires</a>
- 
+Nesta entrega, tive a oportunidade de fazer contribuições significativas tanto no desenvolvimento do diagrama de comunicação quanto no de componentes. Além das fases de estudo individual, participei de forma ativa e engajada nas reuniões realizadas via Discord, desempenhando um papel fundamental na construção de ambos os artefatos. Além disso, também fiz contribuições valiosas para a documentação associada a cada um deles. Embora reconheça que houve membros da equipe que possam ter contribuído de mais nesta entrega, sinto que minha participação foi maior do que na entrega anterior.
+
 #### <a href="https://github.com/dougAlvs">Douglas Alves</a>
 
  
