docs: relatao individual

--- a/docs/Modelagem/2.2.ParticipacoesModelagem.md
+++ b/docs/Modelagem/2.2.ParticipacoesModelagem.md
@@ -211,7 +211,8 @@ Nesta entrega, tive a oportunidade de fazer contribuições significativas tanto
 #### <a href="https://github.com/mathonaut">Matheus Henrique</a>
  
 #### <a href="https://github.com/nando3d3">Sidney Fernando</a>
- 
+Minha experiência trabalhando nos Diagramas de Comunicação, Atividades e Classes foi enriquecedora para conhecer melhor o fluxo que compreende o escopo do nosso projeto. Estudei cada artefato, colaborando com colegas designados para cada um. Focamos na clareza da comunicação, no fluxo de trabalho do sistema e na estrutura das classes. As reuniões da equipe garantiram alinhamento e complementaridade entre os artefatos. No geral, essa participação fortaleceu minha compreensão de design de sistemas e aprimorou minhas habilidades de colaboração.
+
 
 ## Quadro de commits
 
