docs: Adiciona autoavaliação

--- a/docs/Modelagem/2.2.ParticipacoesModelagem.md
+++ b/docs/Modelagem/2.2.ParticipacoesModelagem.md
@@ -14,10 +14,10 @@ Antes de se iniciar a construção dos artefatos para a entrega foi elaborado um
 <iframe style="height: 545px; width: 1030px;" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRw2u-lLpth997XS3LDg9u4PyLIFELeHZtu6ayavYH8aDXA1Cx2zRxGyiu0i9kSTBHJhobp4PK0Ppxq/pubhtml?gid=0&amp;single=true&amp;widget=false&amp;headers=false&amp;chrome=false"></iframe>
 
 <font size="3"><p style="text-align: center">Fonte: [Douglas Alves](https://github.com/dougAlvs) e [Geovanna Maciel](https://github.com/manuziny), 2023</p></font>
+
 </center>
 
 Para a avaliação da participação individual, foi elaborado um [formulário]() em que cada pessoa alocada para um determinado artefato avaliaria sua participação nele, além da participação dos demais colegas. A avaliação foi feita em uma escala de 0 a 4, com o 0 representando uma participação nula e 4 uma participação excelente. Dito isso, a média dessas avaliações será disponibilizada aqui, assim como um breve texto em que cada integrante descreve suas contribuições para a entrega.
-
 
 ## Participações
 
@@ -151,12 +151,12 @@ A tabela 2 sintetiza cada integrante do grupo e sua participação nos respectiv
   <tr>
     <td rowspan="2"> <a href="https://github.com/mathonaut">Matheus Henrique</a></td>
     <td><a href="#/Modelagem/">Diagrama de Sequência</a></td>
-    <td></td>
+    <td>Excelente</td>
     <td></td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Pacotes</a></td>
-    <td></td>
+    <td>Boa</td>
     <td></td>
   </tr>
   <tr>
@@ -194,41 +194,48 @@ Este tópico tem como objetivo trazer a visão individual de cada participante d
 #### <a href="https://github.com/arthurmlv">Arthur de Melo</a>
 
 #### <a href="https://github.com/deboracaires">Débora Caires</a>
+
 Nesta entrega, tive a oportunidade de fazer contribuições significativas tanto no desenvolvimento do diagrama de comunicação quanto no de componentes. Além das fases de estudo individual, participei de forma ativa e engajada nas reuniões realizadas via Discord, desempenhando um papel fundamental na construção de ambos os artefatos. Além disso, também fiz contribuições valiosas para a documentação associada a cada um deles. Embora reconheça que houve membros da equipe que possam ter contribuído de mais nesta entrega, sinto que minha participação foi maior do que na entrega anterior.
 
 #### <a href="https://github.com/dougAlvs">Douglas Alves</a>
 
- 
 #### <a href="https://github.com/manuziny">Geovanna Maciel</a>
 
- 
 #### <a href="https://github.com/Hellen159">Hellen Fernanda</a>
- 
+
 #### <a href="https://github.com/laurapinos">Laura Pinos</a>
- 
+
 #### <a href="https://github.com/macieljuniormax">Maciel Junior</a>
- 
+
 #### <a href="https://github.com/mathonaut">Matheus Henrique</a>
- 
+
+Minha participação nessa etapa foi um pouco afetada tanto por questões relacionadas a outras disciplinas quanto pela semana universitária na qual tive uma participação ativa em todos os dias do evento impossibilitando que me dedicasse de maneira mais colaborativa. Em relação aos artefatos produzidos, no de sequência tive minha melhor performance e pude compreender melhor a sua importância e processo de construção. Já no de pacote, tive uma certa dificuldade em entender como ele funciona, o que me fez focar mais em dar suporte na construção/revisão do artefato e desenvolvimento da documentação.
+
+Sendo assim, senti que houve um certo declínio da minha performance em relação à entrega anterior, portanto, reconheço a necessidade de melhorar-lá para contribuir mais eficazmente em etapas futuras.
+
 #### <a href="https://github.com/nando3d3">Sidney Fernando</a>
- 
 
 ## Quadro de commits
 
 As figuras abaixo mostram os commits dos participantes do grupo na segunda entrega.
 
 <font size="3"><p style="text-align: center"><b>Figura 1</b> - Quadro de commits 1</p></font>
+
 <!-- <img src="assets/../assets/" alt="Gráfico de Commits 1" width="1000"/></br> -->
+
 <font size="3"><p style="text-align: center">Fonte: [Douglas Alves](https://github.com/dougAlvs), 2023</p></font>
 
 <br>
 
 <font size="3"><p style="text-align: center"><b>Figura 2</b> - Quadro de commits 2</p></font>
+
 <!-- <img src="assets/../assets/" alt="Grafico de Commits 2" width="1000"/></br> -->
+
 <font size="3"><p style="text-align: center">Fonte: [Douglas Alves](https://github.com/dougAlvs), 2023</p></font>
 
 ## Histórico de Versões
 
-| Versão | Data       | Descrição                   | Autor(es)                                        | Revisor(es)                                  |
-| ------ | ---------- | --------------------------- | ------------------------------------------------ | -------------------------------------------- |
-| `1.0`  | 08/10/2023 | Criação da página           | [Douglas Alves](https://github.com/dougalvs)  | [Sidney Fernando](https://github.com/nando3d3) |
+| Versão | Data       | Descrição                        | Autor(es)                                        | Revisor(es)                                    |
+| ------ | ---------- | -------------------------------- | ------------------------------------------------ | ---------------------------------------------- |
+| `1.0`  | 08/10/2023 | Criação da página                | [Douglas Alves](https://github.com/dougalvs)     | [Sidney Fernando](https://github.com/nando3d3) |
+| `1.1`  | 08/10/2023 | Adiciona autoavaliação - Matheus | [Matheus Henrique](https://github.com/mathonaut) | [Sidney Fernando](https://github.com/nando3d3) |
