--- a/docs/Modelagem/2.2.ParticipacoesModelagem.md
+++ b/docs/Modelagem/2.2.ParticipacoesModelagem.md
@@ -92,17 +92,17 @@ A tabela 2 sintetiza cada integrante do grupo e sua participação nos respectiv
   <tr>
     <td rowspan="3"> <a href="https://github.com/manuziny">Geovanna Maciel</a></td>
     <td><a href="#/Modelagem/">Diagrama de Comunicação</a></td>
-    <td></td>
+    <td>Excelente</td>
     <td></td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Atividades</a></td>
-    <td></td>
+    <td>Excelente</td>
     <td></td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Pacotes</a></td>
-    <td></td>
+    <td>Excelente</td>
     <td></td>
   </tr>
   <tr>
@@ -195,11 +195,12 @@ Este tópico tem como objetivo trazer a visão individual de cada participante d
 
 #### <a href="https://github.com/deboracaires">Débora Caires</a>
 Nesta entrega, tive a oportunidade de fazer contribuições significativas tanto no desenvolvimento do diagrama de comunicação quanto no de componentes. Além das fases de estudo individual, participei de forma ativa e engajada nas reuniões realizadas via Discord, desempenhando um papel fundamental na construção de ambos os artefatos. Além disso, também fiz contribuições valiosas para a documentação associada a cada um deles. Embora reconheça que houve membros da equipe que possam ter contribuído de mais nesta entrega, sinto que minha participação foi maior do que na entrega anterior.
-
+ 
 #### <a href="https://github.com/dougAlvs">Douglas Alves</a>
 
  
 #### <a href="https://github.com/manuziny">Geovanna Maciel</a>
+Contribuí para a diagramação dos diagramas de pacotes, comunicação e de atividades. Em todos tive colaboração ativa, participando das reuniões em grupo e nos estudos individuais para a produção dos artefatos. O aprofundamento no conteúdo ministrado em sala com a prática foi essencial para entender melhor os conceitos. Acredito que pude ser útil nos artefatos, sempre disposta a receber feedbacks e ir atrás de entregar versões melhores. Ajudei em diagramas em que não estava relacionada, procurando dar suporte aos membros da equipe sempre que fosse possível. Essa etapa do projeto me ajudou a entender melhor os rumos que teríamos que tomar nas próximas entregas e os processos a serem feitos.
 
  
 #### <a href="https://github.com/Hellen159">Hellen Fernanda</a>
@@ -211,8 +212,7 @@ Nesta entrega, tive a oportunidade de fazer contribuições significativas tanto
 #### <a href="https://github.com/mathonaut">Matheus Henrique</a>
  
 #### <a href="https://github.com/nando3d3">Sidney Fernando</a>
-Minha experiência trabalhando nos Diagramas de Comunicação, Atividades e Classes foi enriquecedora para conhecer melhor o fluxo que compreende o escopo do nosso projeto. Estudei cada artefato, colaborando com colegas designados para cada um. Focamos na clareza da comunicação, no fluxo de trabalho do sistema e na estrutura das classes. As reuniões da equipe garantiram alinhamento e complementaridade entre os artefatos. No geral, essa participação fortaleceu minha compreensão de design de sistemas e aprimorou minhas habilidades de colaboração.
-
+ Minha experiência trabalhando nos Diagramas de Comunicação, Atividades e Classes foi enriquecedora para conhecer melhor o fluxo que compreende o escopo do nosso projeto. Estudei cada artefato, colaborando com colegas designados para cada um. Focamos na clareza da comunicação, no fluxo de trabalho do sistema e na estrutura das classes. As reuniões da equipe garantiram alinhamento e complementaridade entre os artefatos. No geral, essa participação fortaleceu minha compreensão de design de sistemas e aprimorou minhas habilidades de colaboração.
 
 ## Quadro de commits
 
