docs: adiciona auto-avaliação

--- a/docs/Modelagem/2.2.ParticipacoesModelagem.md
+++ b/docs/Modelagem/2.2.ParticipacoesModelagem.md
@@ -44,17 +44,17 @@ A tabela 2 sintetiza cada integrante do grupo e sua participação nos respectiv
   <tr>
     <td rowspan="3"> <a href="https://github.com/arthurmlv">Arthur de Melo</a></td>
     <td><a href="#/Modelagem/">Diagrama de Comunicação</a></td>
-    <td></td>
+    <td>Excelente</td>
     <td></td>
   </tr>
   <tr>
     <td> <a href="#/Modelagem/">Diagrama de Atividades</a></td>
-    <td></td>
+    <td>Excelente</td>
     <td></td>
   </tr>
   <tr>
     <td> <a href="#/Modelagem/">Diagrama de Pacotes</a></td>
-    <td></td>
+    <td>Excelente</td>
     <td></td>
   </tr>
   <tr>
@@ -192,6 +192,7 @@ A tabela 2 sintetiza cada integrante do grupo e sua participação nos respectiv
 Este tópico tem como objetivo trazer a visão individual de cada participante do grupo acerca de suas contribuições para a entrega.
 
 #### <a href="https://github.com/arthurmlv">Arthur de Melo</a>
+Para a confecção dos diagramas dos quais participei, o foco foi no desenvolvimento de diversas perspectivas individualmente para enriquecer os artefatos. Após a realização do estudo individual e da versão individual do artefato, realizou-se diversas reuniões de cerca de 4 horas de duração para o desenvolvimento do artefato em conjunto. A semana universitária foi utilizada para fazer os artefatos de forma antecipada e garantir o feedback da professora para retrabalhar e aprimorar os artefatos, o que culminou em uma versão final mais concisa.
 
 #### <a href="https://github.com/deboracaires">Débora Caires</a>
 Nesta entrega, tive a oportunidade de fazer contribuições significativas tanto no desenvolvimento do diagrama de comunicação quanto no de componentes. Além das fases de estudo individual, participei de forma ativa e engajada nas reuniões realizadas via Discord, desempenhando um papel fundamental na construção de ambos os artefatos. Além disso, também fiz contribuições valiosas para a documentação associada a cada um deles. Embora reconheça que houve membros da equipe que possam ter contribuído de mais nesta entrega, sinto que minha participação foi maior do que na entrega anterior.
