docs: adiciona media de participação da avaliação em pares
issue: https://github.com/UnBArqDsw2023-2/2023.2_G7_ProjetoMagazineLuiza/issues/31

--- a/docs/Modelagem/2.2.ParticipacoesModelagem.md
+++ b/docs/Modelagem/2.2.ParticipacoesModelagem.md
@@ -17,7 +17,7 @@ Antes de se iniciar a construção dos artefatos para a entrega foi elaborado um
 
 </center>
 
-Para a avaliação da participação individual, foi elaborado um [formulário]() em que cada pessoa alocada para um determinado artefato avaliaria sua participação nele, além da participação dos demais colegas. A avaliação foi feita em uma escala de 0 a 4, com o 0 representando uma participação nula e 4 uma participação excelente. Dito isso, a média dessas avaliações será disponibilizada aqui, assim como um breve texto em que cada integrante descreve suas contribuições para a entrega.
+Para a avaliação da participação individual, foi elaborado um [formulário](https://forms.gle/1iRAga8uuveqvjZw5) em que cada pessoa alocada para um determinado artefato avaliaria sua participação nele, além da participação dos demais colegas. A avaliação foi feita em uma escala de 0 a 4, com o 0 representando uma participação nula e 4 uma participação excelente. Dito isso, a média dessas avaliações será disponibilizada aqui, assim como um breve texto em que cada integrante descreve suas contribuições para a entrega.
 
 ## Participações
 
@@ -45,140 +45,140 @@ A tabela 2 sintetiza cada integrante do grupo e sua participação nos respectiv
     <td rowspan="3"> <a href="https://github.com/arthurmlv">Arthur de Melo</a></td>
     <td><a href="#/Modelagem/">Diagrama de Comunicação</a></td>
     <td>Excelente</td>
-    <td></td>
+    <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td> <a href="#/Modelagem/">Diagrama de Atividades</a></td>
     <td>Excelente</td>
-    <td></td>
+    <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td> <a href="#/Modelagem/">Diagrama de Pacotes</a></td>
     <td>Excelente</td>
-    <td></td>
+    <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td rowspan="2"> <a href="https://github.com/deboracaires">Débora Caires</a></td>
     <td><a href="#/Modelagem/">Diagrama de Comunicação</a></td>
     <td>Excelente</td>
-    <td></td>
+    <td>Excelente (3,75/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Componentes</a></td>
     <td>Excelente</td>
-    <td></td>
+    <td>Excelente (3,75/4)</td>
   </tr>
   <tr>
     <td rowspan="4"> <a href="https://github.com/dougAlvs">Douglas Alves</a></td>
     <td><a href="#/Modelagem/2.2.ParticipacoesModelagem">Participação - Modelagem</a></td>
-    <td></td>
-    <td></td>
+    <td>Excelente</td>
+    <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Sequência</a></td>
-    <td></td>
-    <td></td>
+    <td>Boa</td>
+    <td>Excelente (3,75/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Componentes</a></td>
-    <td></td>
-    <td></td>
+    <td>Excelente</td>
+    <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Pacotes</a></td>
-    <td></td>
-    <td></td>
+    <td>Excelente</td>
+    <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td rowspan="3"> <a href="https://github.com/manuziny">Geovanna Maciel</a></td>
     <td><a href="#/Modelagem/">Diagrama de Comunicação</a></td>
     <td>Excelente</td>
-    <td></td>
+    <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Atividades</a></td>
     <td>Excelente</td>
-    <td></td>
+    <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Pacotes</a></td>
     <td>Excelente</td>
-    <td></td>
+    <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td rowspan="2"> <a href="https://github.com/Hellen159">Hellen Fernanda</a></td>
     <td><a href="#/Modelagem/">Diagrama de Sequência</a></td>
     <td></td>
-    <td></td>
+    <td>Boa (3,25/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Classes</a></td>
     <td></td>
-    <td></td>
+    <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td rowspan="3"> <a href="https://github.com/laurapinos">Laura Pinos</a></td>
     <td><a href="#/Modelagem/">Diagrama de Sequência</a></td>
     <td></td>
-    <td></td>
+    <td>Regular (1,75/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Componentes</a></td>
     <td></td>
-    <td></td>
+    <td>Boa (2,75/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Classes</a></td>
     <td></td>
-    <td></td>
+    <td>Excelente (3,75/4)</td>
   </tr>
   <tr>
     <td rowspan="3"> <a href="https://github.com/macieljuniormax">Maciel Junior</a></td>
     <td><a href="#/Modelagem/">Diagrama de Atividades</a></td>
     <td></td>
-    <td></td>
+    <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Componentes</a></td>
     <td></td>
-    <td></td>
+    <td>Excelente (3,75/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Classes</a></td>
     <td></td>
-    <td></td>
+    <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td rowspan="2"> <a href="https://github.com/mathonaut">Matheus Henrique</a></td>
     <td><a href="#/Modelagem/">Diagrama de Sequência</a></td>
     <td>Excelente</td>
-    <td></td>
+    <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Pacotes</a></td>
     <td>Boa</td>
-    <td></td>
+    <td>Boa (3/4)</td>
   </tr>
   <tr>
     <td rowspan="4"><a href="https://github.com/nando3d3">Sidney Fernando</a></td>
     <td><a href="#/Modelagem/2.2.ParticipacoesModelagem">Participação - Modelagem</a></td>
     <td>Excelente</td> 
-    <td></td>
+    <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Comunicação</a></td>
     <td>Excelente</td>
-    <td></td>
+    <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Atividades</a></td>
     <td>Excelente</td>
-    <td></td>
+    <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Classes</a></td>
     <td>Excelente</td>
-    <td></td>
+    <td>Excelente (4/4)</td>
   </tr>
 </tbody>
 </table>
@@ -199,6 +199,8 @@ Para a confecção dos diagramas dos quais participei, o foco foi no desenvolvim
 Nesta entrega, tive a oportunidade de fazer contribuições significativas tanto no desenvolvimento do diagrama de comunicação quanto no de componentes. Além das fases de estudo individual, participei de forma ativa e engajada nas reuniões realizadas via Discord, desempenhando um papel fundamental na construção de ambos os artefatos. Além disso, também fiz contribuições valiosas para a documentação associada a cada um deles. Embora reconheça que houve membros da equipe que possam ter contribuído de mais nesta entrega, sinto que minha participação foi maior do que na entrega anterior.
 
 #### <a href="https://github.com/dougAlvs">Douglas Alves</a>
+
+Desde o início da entrega, contribui com a organização do grupo, elaborando as issues de cada artefato, definindo os critérios de aceitação com base no feedback da entrega passada, alocando os integrantes para cada tarefa e revisando os artefatos de maneira geral. Ademais, fiquei responsável pela repaginação do presente artefato de participações, criando em conjunto com o Sidney o formulário de avaliação em pares e o layout da página em si. No diagrama de pacotes auxiliei desde a elaboração da introdução e conclusão do artefato até as diferentes versões do diagrama, apresentando meu ponto de vista para elaboração dos diagramas junto com os colegas. Já no diagrama de componentes, atuei na elaboração da introdução, assim como na versão inicial do diagrama e na versão final repaginada de acordo com os pontos mencionados pela professora em sala. Por fim, no diagrama de sequência atuei principalmente na revisão e suporte na elaboração do artefato.
 
 #### <a href="https://github.com/manuziny">Geovanna Maciel</a>
 
@@ -244,3 +246,4 @@ As figuras abaixo mostram os commits dos participantes do grupo na segunda entre
 | ------ | ---------- | -------------------------------- | ------------------------------------------------ | ---------------------------------------------- |
 | `1.0`  | 08/10/2023 | Criação da página                | [Douglas Alves](https://github.com/dougalvs)     | [Sidney Fernando](https://github.com/nando3d3) |
 | `1.1`  | 08/10/2023 | Adiciona autoavaliação - Matheus | [Matheus Henrique](https://github.com/mathonaut) | [Sidney Fernando](https://github.com/nando3d3) |
+| `1.2`  | 09/10/2023 | Adiciona autoavaliação - Douglas e média geral avaliação por pares | [Douglas Alves](https://github.com/dougalvs) |  |
