docs: adiciona grafico de commits na pagina de participações

--- a/docs/Modelagem/2.2.ParticipacoesModelagem.md
+++ b/docs/Modelagem/2.2.ParticipacoesModelagem.md
@@ -226,19 +226,13 @@ Minha experiência trabalhando nos Diagramas de Comunicação, Atividades e Clas
 
 As figuras abaixo mostram os commits dos participantes do grupo na segunda entrega.
 
-<font size="3"><p style="text-align: center"><b>Figura 1</b> - Quadro de commits 1</p></font>
+<font size="3"><p style="text-align: center"><b>Figura 1</b> - Quadro de commits</p></font>
 
-<!-- <img src="assets/../assets/" alt="Gráfico de Commits 1" width="1000"/></br> -->
-
-<font size="3"><p style="text-align: center">Fonte: [Douglas Alves](https://github.com/dougAlvs), 2023</p></font>
-
-<br>
-
-<font size="3"><p style="text-align: center"><b>Figura 2</b> - Quadro de commits 2</p></font>
-
-<!-- <img src="assets/../assets/" alt="Grafico de Commits 2" width="1000"/></br> -->
+<img src="assets/commits-modelagem.png" alt="Gráfico de Commits" width="1000"/></br>
 
 <font size="3"><p style="text-align: center">Fonte: [Douglas Alves](https://github.com/dougAlvs), 2023</p></font>
+
+
 
 ## Histórico de Versões
 
