--- a/docs/Modelagem/2.2.ParticipacoesModelagem.md
+++ b/docs/Modelagem/2.2.ParticipacoesModelagem.md
@@ -108,12 +108,12 @@ A tabela 2 sintetiza cada integrante do grupo e sua participação nos respectiv
   <tr>
     <td rowspan="2"> <a href="https://github.com/Hellen159">Hellen Fernanda</a></td>
     <td><a href="#/Modelagem/">Diagrama de Sequência</a></td>
-    <td></td>
+    <td>Boa</td>
     <td>Boa (3,25/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Classes</a></td>
-    <td></td>
+    <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
@@ -135,17 +135,17 @@ A tabela 2 sintetiza cada integrante do grupo e sua participação nos respectiv
   <tr>
     <td rowspan="3"> <a href="https://github.com/macieljuniormax">Maciel Junior</a></td>
     <td><a href="#/Modelagem/">Diagrama de Atividades</a></td>
-    <td></td>
+    <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Componentes</a></td>
-    <td></td>
+    <td>Excelente</td>
     <td>Excelente (3,75/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Classes</a></td>
-    <td></td>
+    <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
@@ -207,6 +207,7 @@ Desde o início da entrega, contribui com a organização do grupo, elaborando a
 Contribuí para a diagramação dos diagramas de pacotes, comunicação e de atividades. Em todos tive colaboração ativa, participando das reuniões em grupo e nos estudos individuais para a produção dos artefatos. O aprofundamento no conteúdo ministrado em sala com a prática foi essencial para entender melhor os conceitos. Acredito que pude ser útil nos artefatos, sempre disposta a receber feedbacks e ir atrás de entregar versões melhores. Ajudei em diagramas em que não estava relacionada, procurando dar suporte aos membros da equipe sempre que fosse possível. Essa etapa do projeto me ajudou a entender melhor os rumos que teríamos que tomar nas próximas entregas e os processos a serem feitos.
 
 #### <a href="https://github.com/Hellen159">Hellen Fernanda</a>
+Tive a oportunidade de fazer contribuições tanto em desenvolvimento do diagrama de classes quanto no de sequências. Além das reuniões, participei de forma ativa na elaboração dos artefatos ajudando na construção de tals. Embora reconheça que houve uma falta de atenção no diagrama de sequências.
 
 #### <a href="https://github.com/laurapinos">Laura Pinos</a>
 
