--- a/docs/Modelagem/2.2.ParticipacoesModelagem.md
+++ b/docs/Modelagem/2.2.ParticipacoesModelagem.md
@@ -119,17 +119,17 @@ A tabela 2 sintetiza cada integrante do grupo e sua participação nos respectiv
   <tr>
     <td rowspan="3"> <a href="https://github.com/laurapinos">Laura Pinos</a></td>
     <td><a href="#/Modelagem/">Diagrama de Sequência</a></td>
-    <td></td>
+    <td>Regular</td>
     <td>Regular (1,75/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Componentes</a></td>
-    <td></td>
+    <td>Boa</td>
     <td>Boa (2,75/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Classes</a></td>
-    <td></td>
+    <td>Excelente</td>
     <td>Excelente (3,75/4)</td>
   </tr>
   <tr>
@@ -209,7 +209,7 @@ Contribuí para a diagramação dos diagramas de pacotes, comunicação e de ati
 #### <a href="https://github.com/Hellen159">Hellen Fernanda</a>
 
 #### <a href="https://github.com/laurapinos">Laura Pinos</a>
-
+Minha contribuição nessa entrega foram nos artefatos Diagrama de Sequência,Diagrama de Componentes, Diagrama de Classes. Minha participação no diagrama de sequencia não foi tão efetiva por conta de outras disciplinas que afeteram no meu desempenho nesse aterfato.
 #### <a href="https://github.com/macieljuniormax">Maciel Junior</a>
 
 #### <a href="https://github.com/mathonaut">Matheus Henrique</a>
