docs: adiciona relato de participação

--- a/docs/Modelagem/2.2.ParticipacoesModelagem.md
+++ b/docs/Modelagem/2.2.ParticipacoesModelagem.md
@@ -192,6 +192,7 @@ A tabela 2 sintetiza cada integrante do grupo e sua participação nos respectiv
 Este tópico tem como objetivo trazer a visão individual de cada participante do grupo acerca de suas contribuições para a entrega.
 
 #### <a href="https://github.com/arthurmlv">Arthur de Melo</a>
+
 Para a confecção dos diagramas dos quais participei, o foco foi no desenvolvimento de diversas perspectivas individualmente para enriquecer os artefatos. Após a realização do estudo individual e da versão individual do artefato, realizou-se diversas reuniões de cerca de 4 horas de duração para o desenvolvimento do artefato em conjunto. A semana universitária foi utilizada para fazer os artefatos de forma antecipada e garantir o feedback da professora para retrabalhar e aprimorar os artefatos, o que culminou em uma versão final mais concisa.
 
 #### <a href="https://github.com/deboracaires">Débora Caires</a>
@@ -211,6 +212,8 @@ Contribuí para a diagramação dos diagramas de pacotes, comunicação e de ati
 #### <a href="https://github.com/laurapinos">Laura Pinos</a>
 
 #### <a href="https://github.com/macieljuniormax">Maciel Junior</a>
+
+Durante esta etapa do projeto, eu participei ativamente na criação dos diagramas de atividades, componentes e classes. Dediquei bastante tempo aos estudos individuais para garantir a qualidade dos nossos artefatos e aprofundar minha compreensão dos conceitos discutidos em sala de aula. Tenho convicção de que desempenhei um papel crucial na elaboração dos artefatos, contribuindo de forma significativa para o desenvolvimento. Estou comprometido com a excelência em nosso trabalho e determinado a continuar contribuindo para o sucesso do projeto.
 
 #### <a href="https://github.com/mathonaut">Matheus Henrique</a>
 
@@ -242,8 +245,8 @@ As figuras abaixo mostram os commits dos participantes do grupo na segunda entre
 
 ## Histórico de Versões
 
-| Versão | Data       | Descrição                        | Autor(es)                                        | Revisor(es)                                    |
-| ------ | ---------- | -------------------------------- | ------------------------------------------------ | ---------------------------------------------- |
-| `1.0`  | 08/10/2023 | Criação da página                | [Douglas Alves](https://github.com/dougalvs)     | [Sidney Fernando](https://github.com/nando3d3) |
-| `1.1`  | 08/10/2023 | Adiciona autoavaliação - Matheus | [Matheus Henrique](https://github.com/mathonaut) | [Sidney Fernando](https://github.com/nando3d3) |
-| `1.2`  | 09/10/2023 | Adiciona autoavaliação - Douglas e média geral avaliação por pares | [Douglas Alves](https://github.com/dougalvs) |  |
+| Versão | Data       | Descrição                                                          | Autor(es)                                        | Revisor(es)                                    |
+| ------ | ---------- | ------------------------------------------------------------------ | ------------------------------------------------ | ---------------------------------------------- |
+| `1.0`  | 08/10/2023 | Criação da página                                                  | [Douglas Alves](https://github.com/dougalvs)     | [Sidney Fernando](https://github.com/nando3d3) |
+| `1.1`  | 08/10/2023 | Adiciona autoavaliação - Matheus                                   | [Matheus Henrique](https://github.com/mathonaut) | [Sidney Fernando](https://github.com/nando3d3) |
+| `1.2`  | 09/10/2023 | Adiciona autoavaliação - Douglas e média geral avaliação por pares | [Douglas Alves](https://github.com/dougalvs)     |                                                |
