docs: adiciona auto avaliação

--- a/docs/Modelagem/2.2.ParticipacoesModelagem.md
+++ b/docs/Modelagem/2.2.ParticipacoesModelagem.md
@@ -135,17 +135,17 @@ A tabela 2 sintetiza cada integrante do grupo e sua participação nos respectiv
   <tr>
     <td rowspan="3"> <a href="https://github.com/macieljuniormax">Maciel Junior</a></td>
     <td><a href="#/Modelagem/">Diagrama de Atividades</a></td>
-    <td></td>
+    <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Componentes</a></td>
-    <td></td>
+    <td>Excelente</td>
     <td>Excelente (3,75/4)</td>
   </tr>
   <tr>
     <td><a href="#/Modelagem/">Diagrama de Classes</a></td>
-    <td></td>
+    <td>Excelente</td>
     <td>Excelente (4/4)</td>
   </tr>
   <tr>
