docs: corrige sidebar para adicionar padrões de projeto

--- a/docs/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md
+++ b/docs/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md
@@ -1,11 +1,38 @@
-# 4.2. Módulo Reutilização de Software
+# Reutilização de Software
 
-**Foco_02:** Reutilização de Software.
+## Introdução
 
-Entrega Mínima: Exemplo de Reutilização, evidenciando parte conceitual (se possível, com modelagem) e código. Além de outras situações, os Padrões de Projeto são candidatos a serem revelados aqui (problema, solução, modelagem e código, evidenciando aspectos de reutilização).
 
-Apresentação (em sala) conferindo reflexões sobre reutilização de software no escopo da aplicação, com: (i) rastro claro aos membros participantes (MOSTRAR QUADRO DE PARTICIPAÇÕES & COMMITS); (ii) justificativas & senso crítico sobre reutilização de software; (iii) breve análise do exemplo (parte conceitual & código) no escopo da aplicação, e (iv) comentários gerais sobre o trabalho em equipe. Tempo da Apresentação: +/- 10min. Recomendação: Apresentar diretamente via Wiki ou GitPages do Projeto.
 
-A Wiki ou GitPages do Projeto deve conter um tópico dedicado ao Módulo Reutilização de Software, com exemplo de reutilização de software (parte conceitual & código), histórico de versões, referências, e demais detalhamentos gerados pela equipe nesse escopo.
+## Objetivo
 
-Demais orientações disponíveis nas Diretrizes (vide Moodle).
+
+
+## Metodologia
+
+
+
+## Reutilização Interna
+
+
+
+## Reutilização Externa
+
+
+
+## Conclusão
+
+
+
+## Referências Bibliográficas
+
+> Bourque, P., Fairley, R. E. Guide to the Software Engineering Body of Knowledge, Version 3.0. SWEBOK. IEEE Computer Society, 2014. Disponível em: http://www.computer.org/web/swebok/v3.
+>
+> SOMMERVILLE, Ian. Engenharia de Software. 9a. edição. Pearson, 2011.</p>
+>
+> KRUCHTEN, Philippe B. The 4+1 view model of architecture. IEEE software, v. 12, n. 6, p. 42-50, 1995.
+
+## Histórico de Versões
+| Versão   | Descrição  | Responsável | Revisor    | Data      |
+|----------|------------|-------------|------------|-----------|
+| 1.0      | Criação da estrutura da página   | [Douglas Alves](https://github.com/dougAlvs)   |  [Sidney Fernando](https://github.com/nando3d3)  | 23/11/2023|
