--- a/docs/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md
+++ b/docs/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md
@@ -1,11 +1,61 @@
-# 4.2. Módulo Reutilização de Software
+# Reutilização de Software
 
-**Foco_02:** Reutilização de Software.
+## Introdução
 
-Entrega Mínima: Exemplo de Reutilização, evidenciando parte conceitual (se possível, com modelagem) e código. Além de outras situações, os Padrões de Projeto são candidatos a serem revelados aqui (problema, solução, modelagem e código, evidenciando aspectos de reutilização).
 
-Apresentação (em sala) conferindo reflexões sobre reutilização de software no escopo da aplicação, com: (i) rastro claro aos membros participantes (MOSTRAR QUADRO DE PARTICIPAÇÕES & COMMITS); (ii) justificativas & senso crítico sobre reutilização de software; (iii) breve análise do exemplo (parte conceitual & código) no escopo da aplicação, e (iv) comentários gerais sobre o trabalho em equipe. Tempo da Apresentação: +/- 10min. Recomendação: Apresentar diretamente via Wiki ou GitPages do Projeto.
 
-A Wiki ou GitPages do Projeto deve conter um tópico dedicado ao Módulo Reutilização de Software, com exemplo de reutilização de software (parte conceitual & código), histórico de versões, referências, e demais detalhamentos gerados pela equipe nesse escopo.
+## Objetivo
 
-Demais orientações disponíveis nas Diretrizes (vide Moodle).
+
+
+## Metodologia
+
+
+
+## Reutilização Interna
+
+
+
+## Reutilização Externa
+
+### Banco de Dados
+
+Um exemplo notável da reutilização de software é o uso de Sistemas de Gerenciamento de Banco de Dados para a camada de persistência de aplicações. Os SGBDs são softwares amplamente utilizados, que oferecem uma solução eficiente e confiável para o armazenamento e gerenciamento de dados. No contexto do projeto, optou-se por utilizar o SGBD relacional [MySQL 8.0](https://www.mysql.com), efetivamente reutilizando um componente de software robusto e testado, economizando tempo e recursos que seriam necessários para desenvolver um sistema de banco de dados do zero.
+
+### Uso do Banco
+
+Como um exemplo desse reúso de software por meio de banco de dados, foi feita a implementação de um banco com base na modelagem definida na [Visão de Dados]() do Documento de Arquitetura de Software. Para por o banco para rodar basta seguir o passo a passo seguinte:
+
+1. Caso ainda não tenha, faça a instalação do MySQL de acordo com a [documentação](https://dev.mysql.com/doc/refman/8.2/en/installing.html) da aplicação;
+2. Inicie o servidor MySQL;
+3. No repositório do projeto, especificamente no diretório [code/banco-de-dados](https://github.com/UnBArqDsw2023-2/2023.2_G7_ProjetoMagazineLuiza/tree/main/code/banco-de-dados), estão localizados os scripts SQL do banco. Execute primeiro o [cria.sql](https://github.com/UnBArqDsw2023-2/2023.2_G7_ProjetoMagazineLuiza/blob/main/code/banco-de-dados/cria.sql) para criar o banco de dados, tabelas e views, e depois o [popula.sql](https://github.com/UnBArqDsw2023-2/2023.2_G7_ProjetoMagazineLuiza/blob/main/code/banco-de-dados/popula.sql) para popular essas tabelas;
+4. Se tudo tiver ocorrido bem, o banco já vai estar funcionando na base de dados magaluDB. Caso queira realizar alguns testes, o script [busca.sql](https://github.com/UnBArqDsw2023-2/2023.2_G7_ProjetoMagazineLuiza/blob/main/code/banco-de-dados/busca.sql) apresenta algumas queries SQL que seriam comuns em uma aplicação desse escopo e o script [apaga.sql](https://github.com/UnBArqDsw2023-2/2023.2_G7_ProjetoMagazineLuiza/blob/main/code/banco-de-dados/apaga.sql), que não existiria de maneira tão exposta em casos reais, serve como ferramenta para realizar testes na base de exemplo criada.
+
+Além disso, um outro exemplo de reutilização de software na camada de persistência é o uso de views. Uma view possibilita encapsular determinadas queries SQL como se fossem tabelas, assim pesquisas comumemente realizadas na base de dados, ao invés de serem repetidas, são transformadas em views, com a pesquisa sendo feita em cima delas, ao invés disso. O exemplo de implementação do padrão de projeto [singleton]() exercita a conexão ao banco de dados com esse padrão, além do uso de views no backend. A Figura X mostra alguns exemplos de views que foram criadas no banco de dados do projeto.
+
+<center>
+
+Figura X - Views criadas para o projeto
+
+<img src="assets/DiagramaReutilizacao/views.png" alt="Views criadas para o projeto" width="1400"/>
+
+<font>Fonte: [Douglas Alves](https://github.com/dougAlvs), 2023</font>
+
+</center>
+
+## Conclusão
+
+
+
+## Referências Bibliográficas
+
+> Bourque, P., Fairley, R. E. Guide to the Software Engineering Body of Knowledge, Version 3.0. SWEBOK. IEEE Computer Society, 2014. Disponível em: http://www.computer.org/web/swebok/v3.
+>
+> SOMMERVILLE, Ian. Engenharia de Software. 9a. edição. Pearson, 2011.</p>
+>
+> KRUCHTEN, Philippe B. The 4+1 view model of architecture. IEEE software, v. 12, n. 6, p. 42-50, 1995.
+
+## Histórico de Versões
+| Versão   | Descrição  | Responsável | Revisor    | Data      |
+|----------|------------|-------------|------------|-----------|
+| 1.0      | Criação da estrutura da página   | [Douglas Alves](https://github.com/dougAlvs)   |  [Sidney Fernando](https://github.com/nando3d3)  | 23/11/2023|
